Fix getting/setting transformation matrix (wxOSX)
Transformation settings already applied to the source objects (CGContext, wxWindow) and inherited by wxGraphicsContext should be considered as a baseline transformation matrix for wxGC and shouldn't be exposed through e.g. GetTransform() function (like it's done in Cairo or Direct2D). To report only transformations explicitly applied to wxGC by calls to the corresponding wxGC functions, we need to store initial CTM (in a dedicated variable) and "subtract" it from the actual transformation settings.

See #17609.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -211,6 +211,7 @@ wxOSX:
 - Update font code to use toll-free bridges from CTFontRef to NSFont or UIFont
 - Add a native implementation for clearing bitmap/window wxGraphicsContexts
 - wxiOS now needs a minimum of iOS 9 for deployment
+- Fix handling CTM in wxGraphicsContext::SeTransform and GetTransform().
 
 Unix:
 
