Fix setting wxGCDC clipping region with device coordinates (wxOSX)
Currently region given in device coordinates is decomposed into the stripes which are next transformed to the logical coordinates required by underlying wxGraphicsContext::Clip() function. Some of these stripes given in device coordinates can have 1-pixel height what after transformation to logical coordinates can give zero-height stripes (after rounding). This can lead to the situation that in the region transformed to logical coordinates some stripes can disappear and final transformed region shape is different from the source shape (it has gaps).
To fix this issue device coordinates of the region are not manually transformed to the logical coordinates but instead wxGraphicsContext's is temporarily set to the state where its logical coordinates are equivalent to device coordinates and thus clipping region can be applied directly.
Solution for wxMSW, wxGTK is implemented in 85cc040427.

Closes #17609.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -143,6 +143,7 @@ All (GUI):
 - Fix adding/removing items to/from wxRearrangeList.
 - Handle wxST_ELLIPSIZE_XXX styles in wxStaticText XRC handler (tm).
 - Add support for bitmaps to wxToggleButton XRC handler (tm).
+- Fix wxGCDC::SetDeviceClippingRegion().
 
 wxGTK:
 
