Allow turning on/off opacity selector in wxColourDialog (wxOSX)
This feature to show/hide alpha values and opacity selector (slider) is
already implemented under wxGTK and for generic wxColourDialog.
For the sake of backward compatibility, this feature is enabled here by
default (through the corresponding property of wxColourData).

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -213,6 +213,7 @@ wxOSX:
 - Add a native implementation for clearing bitmap/window wxGraphicsContexts
 - wxiOS now needs a minimum of iOS 9 for deployment
 - Fix handling CTM in wxGraphicsContext::SeTransform and GetTransform().
+- Allow turning on/off opacity selector in wxColourDialog.
 
 Unix:
 
