--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -172,6 +172,7 @@ wxMSW:
 - Fix wxScreenDC::GetSize() with multiple monitors (iwbnwif).
 - Fix background colour returned by wxTextCtrl::GetStyle() (Andreas Falkenhahn).
 - Revert to using equally-sized buttons in wxToolBar by default.
+- Fix default button highlighting.
 - Restore dispatching wxThreadEvent while resizing the window broken in 3.1.0.
 - Fix wxGraphicsMatrix::TransformDistance for Direct2D renderer.
 - Fix wxDC::Clear() for rotated DC.
