Check for window best size in wxPersistentTLW
Ensure that the restored size is at least equal to the best size of the
window to avoid cutting off parts of it in (a common) case when a newer
version of the program adds new UI elements, thus increasing the window
best size and possibly making the previously stored size too small.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -144,6 +144,7 @@ All (GUI):
 - Handle wxST_ELLIPSIZE_XXX styles in wxStaticText XRC handler (tm).
 - Add support for bitmaps to wxToggleButton XRC handler (tm).
 - Fix wxGCDC::SetDeviceClippingRegion().
+- Never restore size smaller than the best one in wxPersistentTLW.
 
 wxGTK:
 
