Fix escaping/unescaping in wxLongStringProperty
wxPropertyGrid::ExpandEscapeSequences() function should convert all valid
escape sequences (\r, \n, \t, \\) to the corresponding single characters
(CR, LF, TAB, backslash, accordingly) and
wxPropertyGrid::CreateEscapeSequences() function should do the reverse
operation and convert these raw characters to the corresponding escape
sequences.

Closes #17896.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -145,6 +145,7 @@ All (GUI):
 - Add support for bitmaps to wxToggleButton XRC handler (tm).
 - Fix wxGCDC::SetDeviceClippingRegion().
 - Never restore size smaller than the best one in wxPersistentTLW.
+- Fix escaping/unescaping characters in wxLongStringProperty in wxPG (mikek).
 
 wxGTK:
 
