--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -189,6 +189,7 @@ wxMSW:
 
 wxOSX:
 
+- Many fixes for tab navigation (ikamakj).
 - Fix handling of non-BMP characters in GetPartialTextExtents() (ARATA Mizuki).
 - Fix dialogs using wxFRAME_FLOAT_ON_PARENT frame as parent (Lauri Nurmi).
 - Implement wxGetDisplaySizeMM() and fix printing DPI (David Vanderson).
