Implement wxTextCtrl::PositionToXY() and XYToPosition() (wxOSX)
Apparently there is no native API to retrieve such information in a simple
way so all calculations have to be done with raw text stored in
the corresponding control(s).

Closes #4146.
See #17811.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -220,6 +220,7 @@ wxOSX:
 - wxiOS now needs a minimum of iOS 9 for deployment
 - Fix handling CTM in wxGraphicsContext::SeTransform and GetTransform().
 - Allow turning on/off opacity selector in wxColourDialog.
+- Implement wxTextCtrl::PositionToXY() and XYToPosition().
 
 Unix:
 
