Rename context-specific translation macros and document them
Try to use more clear names for the macros and also try to make the
sample more self-explanatory.

--- a/samples/internat/fr/internat.po
+++ b/samples/internat/fr/internat.po
@@ -17,32 +17,32 @@ msgstr ""
 "X-Generator: Poedit 1.8.7\n"
 
 msgid "item"
-msgstr "item0"
+msgstr "Item without context"
 
-msgctxt "cont1"
+msgctxt "context_1"
 msgid "item"
-msgstr "item1"
+msgstr "Item in context 1"
 
-msgctxt "cont2"
+msgctxt "context_2"
 msgid "item"
-msgstr "item2"
+msgstr "Item in context 2"
 
 msgid "sing"
 msgid_plural "plur"
-msgstr[0] "sing0"
-msgstr[1] "plur0"
+msgstr[0] "Singular form without context"
+msgstr[1] "Plural form without context"
 
-msgctxt "cont1"
+msgctxt "context_1"
 msgid "sing"
 msgid_plural "plur"
-msgstr[0] "sing1"
-msgstr[1] "plur1"
+msgstr[0] "Singular form in context 1"
+msgstr[1] "Plural form in context 1"
 
-msgctxt "cont2"
+msgctxt "context_2"
 msgid "sing"
 msgid_plural "plur"
-msgstr[0] "sing2"
-msgstr[1] "plur2"
+msgstr[0] "Singular form in context 2"
+msgstr[1] "Plural form in context 2"
 
 #: internat.cpp:98
 msgid "International wxWindows App"
