--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -76,6 +76,7 @@ All:
 
 - Add wxSecretStore for storing passwords using the OS-provided facilities.
 - Add support for compiling application code with wxNO_UNSAFE_WXSTRING_CONV.
+- Add support for translating strings in different contexts (RickS).
 - Add support for the micro version (third component) to OS and toolkit version
   functions. See wxGetOsVersion(), wxPlatformInfo, and wxAppTraits.
 - wxLogInfo() now logs messages if the log level is high enough, even without
