Fix wxTextCtrl::PositionToXY (wxMSW)
Check if character position is not past the line.
When calculating (x,y) for given character position there is necessary
to take into account that for multi-line control each line (but last one)
is ended by 2-character end of line mark. Each character of this
2-character mark has a different position in the text buffer but is mapped
to the same (x,y) coordinates.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -195,7 +195,7 @@ wxMSW:
 - Fix placing 0RGB wxBitmaps on the clipboard.
 - Fix handling wxClipboard data when wxUSE_OLE == 0.
 - Fix caching of wxFONTSTYLE_SLANT fonts in wxTheFontList.
-- Fix wxTextCtrl::XYToPosition().
+- Fix wxTextCtrl::XYToPosition() and PositionToXY().
 
 wxOSX:
 
