Don't convert any non-monochrome wxBitmap to ARGB format
While selecting wxBitmap with colour depth > 1 bpp into wxMemoryDC there is
no need to convert its format to ARGB regardless of the current
interpretation of the alpha channel values in the bitmap. If original
bitmap was marked as a RGB one (with alpha channel being ignored), it
should retain this format to avoid confusions.

Closes #16309.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -228,6 +228,7 @@ wxOSX:
 - Implement wxTextCtrl::ShowPosition().
 - Add support for wxTE_NO_VSCROLL style to wxTextCtrl.
 - Add support for wxTE_CHARWRAP style to wxTextCtrl.
+- Fix selecting RGB bitmaps (with no alpha channel) into wxMemoryDC.
 
 Unix:
 
