Fix updating radio groups when non-radio item is inserted to wxMenu (MSW)
When wxMenu contains radio groups and a new item (radio and non-radio) is
being added to the menu, data describing exisiting groups have to
be updated accordingly. Because adding radio and non-radio items has
a different impact on the groups, adding non-radio items has to be handled
separately. (The main difference between adding radio and non-radio item is
that when a radio item is inserted inside the group this group is extended,
but for non-radio item the group is split into two subgroups.)

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -199,6 +199,7 @@ wxMSW:
 - Fix handling wxClipboard data when wxUSE_OLE == 0.
 - Fix caching of wxFONTSTYLE_SLANT fonts in wxTheFontList.
 - Fix wxTextCtrl::XYToPosition() and PositionToXY().
+- Fix updating radio groups when non-radio item is inserted to wxMenu.
 
 wxOSX:
 
