Reimplement adding items to radio groups in wxMenu (wxOSX)
Rewrote wxOSX radio groups-related code reusing the code which works on
wxMSW and which seems to provide more rich functionality (supports adding
radio as well as no-radio items) and to have known bugs fixed.
The ranges of all radio groups are stored in wxMenu itself instead of
storing the information about the radio group an item belongs to in
the item itself - see 35975c5800.

Closes #14213.
Closes #17568.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -230,6 +230,7 @@ wxOSX:
 - Add support for wxTE_NO_VSCROLL style to wxTextCtrl.
 - Add support for wxTE_CHARWRAP style to wxTextCtrl.
 - Fix selecting RGB bitmaps (with no alpha channel) into wxMemoryDC.
+- Fix updating radio groups when menu item is inserted/removed from wxMenu.
 
 Unix:
 
