--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -58,6 +58,10 @@ Changes in behaviour which may result in build errors
 - Never documented and not always available private wxGetClipboardData()
   function now doesn't exist at all any more in wxMSW, use wxClipboard instead.
 
+- wxGraphicsRenderer::CreatePen() now takes wxGraphicsPenInfo and not a wxPen.
+  This only affects code defining its own custom renderers, code just using
+  wxGraphicsContext::CreatePen() continues to compile and work as before.
+
 
 3.1.1: (not released yet)
 ----------------------------
