--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -155,6 +155,7 @@ All (GUI):
 - Never restore size smaller than the best one in wxPersistentTLW.
 - Fix escaping/unescaping characters in wxLongStringProperty in wxPG (mikek).
 - Ensure that navigation order reflects layout of wxStdDialogButtonSizer.
+- Add Scintilla FineTicker methods to wxSTC (NewPagodi).
 
 wxGTK:
 
