Allow setting position of wxProgressDialog (wxMSW)
Position of wxProgressDialog cannot be changed directly because the dialog is created in another thread and may exist when SetPosition() is called. New position has be stored in the data structure used to share data between the main thread and the task dialog runner and the real update is done during the cyclic refresh in the dialog thread.

Closes #13546.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -211,6 +211,7 @@ wxMSW:
 - Fix wxTextCtrl::XYToPosition() and PositionToXY().
 - Fix updating radio groups when non-radio item is inserted to wxMenu.
 - Fix autoselecting the contents of wxTextCtrl with wxWANTS_CHARS style.
+- Implement SetIcon(), SetPosition(), GetPosition() for native wxProgressDialog.
 
 wxOSX:
 
