--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -214,6 +214,7 @@ wxMSW:
 - Fix updating radio groups when non-radio item is inserted to wxMenu.
 - Fix autoselecting the contents of wxTextCtrl with wxWANTS_CHARS style.
 - Implement SetIcon(), SetPosition(), GetPosition() for native wxProgressDialog.
+- Fix crash when reparenting the currently focused window to another TLW.
 
 wxOSX:
 
