Use zlib submodule with "wx_zlib_" prefix
This will allow projects to use static wxWidgets libraries and zlib
(either directly or indirectly, as can heppen e.g. via Boost.IOStreams)
at the same time without link conflicts.

See #15314.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -104,6 +104,7 @@ All:
 - Don't crash in wxFFile::Eof() or Error() on closed file (jprotopopov).
 - Add UTF-8 support to wxZipOutputStream (Tobias Taschner).
 - Update all bundled 3rd party libraries to their latest versions.
+- Use unique prefix for all zlib symbols to avoid link conflicts.
 
 All (GUI):
 
