--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -442,6 +442,7 @@ wxMSW:
 - Fix UTF-32 conversion for non-BMP characters (ARATA Mizuki).
 - Use correct parent for the native modal dialogs (Andreas Falkenhahn).
 - Fix layout of wxSlider with wxSL_VALUE_LABEL only (gafatoa).
+- Fix flicker when resizing columns of report-mode wxListCtrl.
 
 wxOSX/Cocoa:
 
