Add wxIMAGE_OPTION_GIF_TRANSPARENCY for GIF image loading
Allow to keep the originally defined transparent pixels colour instead
of replacing it with bright pink (which is still the default behaviour).

Closes #18014.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -183,6 +183,7 @@ All (GUI):
 - Extend wxRendererNative::DrawGauge() to work for vertical gauges too.
 - Add wxHD_BITMAP_ON_RIGHT style to wxHeaderCtrl.
 - Send wxEVT_DATAVIEW_ITEM_EDITING_DONE when editing was cancelled too.
+- Add wxIMAGE_OPTION_GIF_TRANSPARENCY (Hugo Elias).
 
 wxGTK:
 
