--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -115,6 +115,7 @@ All (GUI):
 - Add support for loading fonts from external files (Arthur Norman).
 - Improve wxSVGFileDC to support more of wxDC API (Maarten Bent).
 - Add support for wxAuiManager and wxAuiPaneInfo to XRC (Andrea Zanellato).
+- Add XRC handler for wxSpinCtrlDouble (Trylz).
 - Add support for wxSL_MIN_MAX_LABELS and wxSL_VALUE_LABEL to XRC (ousnius).
 - Update Scintilla to v3.7.2 (NewPagodi, Paul Kulchenko).
 - Update bundled libpng to 1.6.28 (Catalin Raceanu).
