--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -176,6 +176,7 @@ All (GUI):
 - Add wxFontPickerCtrl::SetMinPointSize() (Andreas Falkenhahn).
 - Add Set/GetFooter/Text/Icon() to wxRichMessageDialog (Tobias Taschner)
 - Add wxFloatingPointValidator::SetFactor().
+- Add "hint" property to wxSearchCtrl XRC handler.
 
 wxGTK:
 
