Correct UTF-8 encoding of U+FFFF
Overlong (and hence invalid) 4-byte encoding was used for this character
instead of the correct 3-byte 0xEF 0xBF 0xBF sequence.

Fix this by using 3 bytes for the code points up to 0xFFFF included,
instead of excluding it as was done before.

Closes #17920.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -108,6 +108,7 @@ All:
 - Update all bundled 3rd party libraries to their latest versions.
 - Use unique prefix for all zlib symbols to avoid link conflicts.
 - Make wxFile::ReadAll() work for unseekable files too.
+- Correct UTF-8 encoding of U+FFFF (axiom).
 
 All (GUI):
 
