Generate wxEVT_SEARCHCTRL_SEARCH_BTN when Enter is pressed
Make it possible to bind to just wxEVT_SEARCHCTRL_SEARCH_BTN under all
platforms: previously, it was also necessary to bind to wxEVT_TEXT_ENTER
when using the generic implementation, as pressing Enter in the text
control didn't generate the dedicated SEARCH event.

It does now, and, to avoid any confusion, the control does not generate
wxEVT_TEXT_ENTER events at all any more. This is not really
incompatible, as wxOSX never generated these events anyhow and the
generic version only did for a couple of days, since the changes of
038ba167f9184614f2eedbcae77bea35b44f7f6f which were, finally, misguided
and so are undone by this commit.

Closes #17911.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -177,6 +177,7 @@ All (GUI):
 - Add Set/GetFooter/Text/Icon() to wxRichMessageDialog (Tobias Taschner)
 - Add wxFloatingPointValidator::SetFactor().
 - Add "hint" property to wxSearchCtrl XRC handler.
+- Generate wxEVT_SEARCHCTRL_SEARCH_BTN on Enter under all platforms.
 
 wxGTK:
 
