--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -177,7 +177,8 @@ All (GUI):
 - Add Set/GetFooter/Text/Icon() to wxRichMessageDialog (Tobias Taschner)
 - Add wxFloatingPointValidator::SetFactor().
 - Add "hint" property to wxSearchCtrl XRC handler.
-- Generate wxEVT_SEARCHCTRL_SEARCH_BTN on Enter under all platforms.
+- Add wxEVT_SEARCH[_CANCEL] synonyms for wxSearchCtrl events.
+- Generate wxEVT_SEARCH on Enter under all platforms.
 
 wxGTK:
 
