--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -248,6 +248,7 @@ wxMSW:
 - Fix focus-related problems when using native wxProgressDialog.
 - Fix crash when reparenting the currently focused window to another TLW.
 - Fix sending wxEVT_TEXT_ENTER when using auto-completion (Dubby).
+- Fix missing selection event on click in multiselection wxDataViewCtrl (mikek).
 
 wxOSX:
 
