Add wxHD_BITMAP_ON_RIGHT style to wxHeaderCtrl
Implement this style for wxMSW to allow putting the column images on the
right side, for consistency with wxMSW wxListCtrl.

See #13350.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -181,6 +181,7 @@ All (GUI):
 - Add wxEVT_SEARCH[_CANCEL] synonyms for wxSearchCtrl events.
 - Generate wxEVT_SEARCH on Enter under all platforms.
 - Extend wxRendererNative::DrawGauge() to work for vertical gauges too.
+- Add wxHD_BITMAP_ON_RIGHT style to wxHeaderCtrl.
 
 wxGTK:
 
