Allow using wxRendererNative::DrawGauge() for vertical gauges too
It was unexpected that this method could only be used for horizontal
gauges, so make it work for the vertical ones if wxCONTROL_SPECIAL flag
is specified.

Update MSW and generic implementations and the render sample to show a
vertical gauge as well.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -180,6 +180,7 @@ All (GUI):
 - Add "hint" property to wxSearchCtrl XRC handler.
 - Add wxEVT_SEARCH[_CANCEL] synonyms for wxSearchCtrl events.
 - Generate wxEVT_SEARCH on Enter under all platforms.
+- Extend wxRendererNative::DrawGauge() to work for vertical gauges too.
 
 wxGTK:
 
