--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -282,6 +282,7 @@ wxOSX:
 - Fix selecting RGB bitmaps (with no alpha channel) into wxMemoryDC.
 - Fix updating radio groups when menu item is inserted/removed from wxMenu.
 - Allow changing alignment styles after wxTextCtrl creation (Andreas Falkenhahn).
+- Fix wxDataViewColumn::SetSortOrder() (hartwigw).
 
 wxQt
 
