Fix custom scheme handling in wxWebView WebKit2 implementation
The custom scheme handling implementation had been inherited from the
original WebKit1 implementation.  It attempted to intercept navigation
and resource load requests and then inject the resources.  It seems that
this method doesn't work in WebKit2, but fortunately, there is native
support in WebKit2 for custom URI schemes through the
webkit_web_context_register_uri_scheme() API.

Also extend wxGtkError to allow creating it from an existing GError
object as a side-effect of these changes.

See https://github.com/wxWidgets/wxWidgets/pull/716

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -209,6 +209,7 @@ wxGTK:
 - Implement ShowPosition() for single-line wxTextCtrl.
 - Improve wx{Client,Paint,Screen,Window}DC::GetPPI() (GTK+ 3).
 - Suppress focus loss events for wxChoice and wxComboBox on opening popup.
+- Make custom URI schemes work WebKit2-based wxWebView (Scott Talbert).
 
 wxMSW:
 
