--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -182,6 +182,7 @@ All (GUI):
 - Generate wxEVT_SEARCH on Enter under all platforms.
 - Extend wxRendererNative::DrawGauge() to work for vertical gauges too.
 - Add wxHD_BITMAP_ON_RIGHT style to wxHeaderCtrl.
+- Send wxEVT_DATAVIEW_ITEM_EDITING_DONE when editing was cancelled too.
 
 wxGTK:
 
