--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -64,7 +64,7 @@ Changes in behaviour which may result in build errors
   wxGraphicsContext::CreatePen() continues to compile and work as before.
 
 
-3.1.1: (not released yet)
+3.1.1: (released 2018-02-19)
 ----------------------------
 
 INCOMPATIBLE CHANGES SINCE 3.1.0:
