--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -64,6 +64,14 @@ Changes in behaviour which may result in build errors
   wxGraphicsContext::CreatePen() continues to compile and work as before.
 
 
+3.1.2: (released 2018-??-??)
+----------------------------
+
+All:
+
+- Make wxList iterators conform to input iterator requirements.
+
+
 3.1.1: (released 2018-02-19)
 ----------------------------
 
