Make wxVector reverse iterators conform to iterator requirements
This is similar to a recent commit adding the missing typedefs to wxList
iterators and defines the types required by the iterator concept in
wxVector::reverse_iterator and const_reverse_iterator classes (simple
iterators are just pointers and are already covered by the standard
iterator_traits specialization).

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -69,7 +69,7 @@ Changes in behaviour which may result in build errors
 
 All:
 
-- Make wxList iterators conform to input iterator requirements.
+- Make wxList and wxVector iterators conform to input iterator requirements.
 
 
 3.1.1: (released 2018-02-19)
