Fix possible hang after clearing wxTAB_TRAVERSAL style in wxMSW
Clearing this style by calling SetWindowStyleFlag() could reset
WS_EX_CONTROLPARENT extended flags bit, breaking the invariant that the
parent of any window with this bit set has it as well and resulting in
hangs due to infinite loops inside Windows own code iterating over the
controls.

Prevent this from happening by always preserving this style bit if it
was previously set in MSWUpdateStyle(). This is a bit ugly, but there
doesn't seem to be any obviously better way to do it.

Closes #18091.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -71,6 +71,10 @@ All:
 
 - Make wxList and wxVector iterators conform to input iterator requirements.
 
+wxMSW:
+
+- Fix hang after clearing wxTAB_TRAVERSAL style on a window with children.
+
 
 3.1.1: (released 2018-02-19)
 ----------------------------
