Fix handling of second auxiliary mouse button events in wxMSW
The test for AUX2 mouse button was wrong and checked whether the button
was pressed, instead of checking whether the event was generated by it.

Check the event source correctly by comparing wParam with XBUTTON2 and
not MK_XBUTTON2.

Closes https://github.com/wxWidgets/wxWidgets/pull/753

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -78,6 +78,7 @@ wxGTK:
 wxMSW:
 
 - Fix hang after clearing wxTAB_TRAVERSAL style on a window with children.
+- Fix handling of AUX2 mouse button events (Trylz).
 
 
 3.1.1: (released 2018-02-19)
