Fix wxGTK build with glib < 2.32 and streamline the code a bit
Define g_signal_handlers_disconnect_by_data() if it's not available,
i.e. when using glib older than 2.32 where it was added, to fix the
build under old systems such as CentOS 6 broken by the changes of
e3f783f368036672c4e0a593d984482da9e6cdb8 (see #18084).

Also use it elsewhere instead of g_signal_handlers_disconnect_matched()
as it's more readable.

Closes https://github.com/wxWidgets/wxWidgets/pull/760

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -71,6 +71,10 @@ All:
 
 - Make wxList and wxVector iterators conform to input iterator requirements.
 
+wxGTK:
+
+- Fix the build with glib < 2.32 (e.g. CentOS 6).
+
 wxMSW:
 
 - Fix hang after clearing wxTAB_TRAVERSAL style on a window with children.
