--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -63,6 +63,9 @@ Changes in behaviour which may result in build errors
   This only affects code defining its own custom renderers, code just using
   wxGraphicsContext::CreatePen() continues to compile and work as before.
 
+- wx/treebook.h doesn't include wx/treectrl.h (and, via it, wx/textctrl.h) any
+  more, include these headers explicitly from your code if necessary.
+
 
 3.1.2: (released 2018-??-??)
 ----------------------------
