--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -70,6 +70,7 @@ Changes in behaviour which may result in build errors
 All:
 
 - Make wxList and wxVector iterators conform to input iterator requirements.
+- Fix MT-safety problem when reading and writing from wxSocket (jkubalik).
 
 wxGTK:
 
